--- a/Html_Exam/Html_Exam.html
+++ b/Html_Exam/Html_Exam.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Hands on Test on Html</title>
   </head>
   <header>
@@ -144,4 +145,11 @@
       </section>
     </center>
   </body>
+  <footer>
+    <center>
+      <hr />
+      <p>&copy; 2025 Fardin Abu Ubaid</p>
+      <p>All rights reserved.</p>
+    </center>
+  </footer>
 </html>
