--- a/D4/home.html
+++ b/D4/home.html
@@ -14,7 +14,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="#" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -68,4 +68,8 @@
       </section>
     </main>
   </body>
+  <footer>
+    <p>&copy; 2023 Fardin Ubaid. All rights reserved.</p>
+    <p>Follow me on <a href="#">Twitter</a> | <a href="#">LinkedIn</a></p>
+  </footer>
 </html>
