--- a/Html_CSS_Test/Test.html
+++ b/Html_CSS_Test/Test.html
@@ -544,7 +544,7 @@
           </div>
           <div class="summary">
             <div class="summary-title">Age</div>
-            <div class="summary-text">19 - 23 years</div>
+            <div class="summary-text">23 years</div>
           </div>
           <div class="summary">
             <div class="summary-title">Current Salary</div>
