--- a/Js/JS_Test.html
+++ b/Js/JS_Test.html
@@ -84,12 +84,12 @@
           <input type="reset" value="Reset" />
         </form>
       </fieldset>
-      <form action="#">
+      <!-- <form action="#">
         <label for="name1">Name: </label>
         <input type="text" id="name1" />
         <button type="submit" onclick="return test()">Submit</button>
       </form>
-      <h1 id="result"></h1>
+      <h1 id="result"></h1> -->
     </main>
     <footer>
       <p>&copy; 2025 Fardin Abu Ubaid</p>
